--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
     <groupId>com.jobintech</groupId>
     <artifactId>devopsBack</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>devopsBack</name>
+    <name>devopsBacks</name>
     <description>devopsBack</description>
     <url/>
     <licenses>
